2009-11-24  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_daemon.c (nwamd_event_handler):
	Fixed crash on getting wlan scan report after the wireless link is
	destroyed.
	* capplet/nwam_conn_stat_panel.c (cancel), (apply), (help),
	(conn_view_filter_visible_cb):
	* common/nwamui_wifi_net.c (nwamui_wifi_net_set_status):
	* daemon/nwam-tooltip-widget.c (connect_object),
	(nwam_object_notify):
	clean code.
	
2009-11-23  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_ncu.c:
	* common/nwamui_object.c (nwamui_object_get_nwam_state):
	clean code. Do not use _() for nwam_aux_state_to_string

2009-11-23  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_daemon.c (dispatch_scan_results_from_wlan_array):
	Forgot unref. Set wifi_net parent before set its state.
	* common/nwamui_ncp.c (nwamui_ncp_get_ncu_by_device_name):
	Add a debug info.
	* common/nwamui_ncu.c (nwamui_ncu_set_property):
	Set display name right after set vanity-name(name). TODO should
	'device-name' be read-only and construct only?
	Rework inf/link state to fix that can't show connecting to wlan state
	and activate wlan menu-item when connecting the wlan.
	* common/nwamui_object.c (nwamui_object_init),
	(nwamui_object_get_property):
	Clean code.
	* daemon/nwam-ncu-item.c (menu_ncu_item_compare):
	Rework sort function.
	* daemon/status_icon.c (ncp_add_ncu), (ncp_remove_ncu):
	* daemon/status_icon_tooltip.c (nwam_tooltip_widget_update_daemon),
	(tooltip_ncu_compare):
	Rework sort function.
	
	Fixed 12666 [RC5] balloon popup indicates connected interface when it
	is taken off line
	
2009-11-23  malin  <malin@os>

	* common/libnwamui.c (nwamui_util_validate_text_entry):
	Fixed 12796 [RC6]nwam-manager-propertioes cores when changing
	IPV6 prefix length

2009-11-23  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c (nwam_ncu_compare_cb):
	* capplet/capplet-utils.h:
	Add default ncu tree model sort func for 12610
	* capplet/nwam_condition_vbox.c (_cu_ncu_combo_cell_cb):